sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: reassignment to val
	var lgr = Int = getNombreValeurs();
                      ^